<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/gray">

    <RelativeLayout
            android:id="@+id/dateBar"
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        <TextView
                android:id="@+id/txtMonthTitle"
                android:layout_width="115dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="Month"
                android:textColor="@color/darkslate"
                android:textSize="20dp"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/txtSelectedMonth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/imgbtnCal"
                android:layout_toRightOf="@+id/txtMonthTitle"
                android:background="@drawable/apptheme_textfield_activated_holo_light"
                android:ellipsize="none"
                android:gravity="center_vertical"
                android:minHeight="40dp"
                android:singleLine="false"
                android:text=""
                android:textColor="@color/darkslate"
                android:textSize="16dp"
                android:textStyle="normal"/>
        <ImageButton
                android:id="@+id/imgbtnCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:background="@null"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/cal"/>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/month_weekbar"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_below="@+id/dateBar"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/m"
                android:textColor="@color/month_gray"
                android:textSize="10dp"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/t"
                android:textColor="@color/month_gray"
                android:textSize="10dp"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingRight="5dp"
                android:text="@string/w"
                android:textColor="@color/month_gray"
                android:textSize="10dp"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingRight="5dp"
                android:text="@string/t"
                android:textColor="@color/month_gray"
                android:textSize="10dp"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingRight="5dp"
                android:text="@string/f"
                android:textColor="@color/month_gray"
                android:textSize="10dp"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingRight="5dp"
                android:text="@string/s"
                android:textColor="@color/month_gray"
                android:textSize="10dp"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/s"
                android:textColor="@color/circle"
                android:textSize="10dp"/>
    </LinearLayout>
    <View
            android:id="@+id/emptyview"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/month_weekbar"
            android:layout_marginTop="-8dp"
            android:background="@color/litegray"/>
    <GridView
            android:id="@+id/gridCalendar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/emptyview"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:fadingEdge="none"
            android:gravity="center"
            android:horizontalSpacing="2dp"
            android:listSelector="@color/transparent"
            android:numColumns="7"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="0dp"/>
</RelativeLayout>